# mmml

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .readthedocs.yaml  AGENTS.md  BATCH_DIMENSION_FIX.md  CHARGE_SPIN_PHYSNET.md  CHARGE_SPIN_SUMMARY.md  CHARMMSETUP  CLEANUP_SUMMARY.md  CO2_ZBL_TRAINING_TEST.md  CODE_COMPARISON.md  COMPLETE_INDEX.md  CRITICAL_ISSUES_SUMMARY.md  CUBE_DATA_FEATURE.md  DATA_HARMONIZATION.md  DCM2LOG  DOCKER_USAGE.md  Dockerfile  ENERGY_PREPROCESSING_SUMMARY.md  FIXES_APPLIED.md  FIX_SUMMARY.md  HYBRID_CALCULATOR_DEBUGGING.md  INDEX_MEMMAP_TRAINING.md  INITIALIZATION_ISSUES_AND_FIXES.md  INSTALLATION.md  INTELLIGENT_DATA_LOADING.md  MULTIBATCH_TRAINING_GUIDE.md  MULTI_BATCH_SUMMARY.md  Makefile  NO_MAGIC_NUMBERS.md  OPTIONAL_DEPENDENCIES.md  OPTIONAL_DEPS_SUMMARY.md  PREDICTION_OPTIONS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_IMPROVEMENTS.md  (+53 more)
.cursor/: mcp.json
.git-rewrite/: backup-refs  commit  heads  index  parse  revs
.github/: CONTRIBUTING.md
AI/: CLI_ADVANCED_TOOLS.md  CLI_MIGRATION_COMPLETE.md  COMPLETE_CLI_SUITE.md  FINAL_CLI_SUMMARY.md  SESSION_SUMMARY.md
acetone/: Untitled.ipynb  suite_summary.json  suite_summary_jaxmd.json  suite_timing.json  timing_log.txt  vac_nvt_jaxmd_nvt.h5  vac_nvt_langevin_run.json
analysis/: training_summary.txt
beamer_slides/: FIGURES_GUIDE.md  FINAL_SUMMARY.md  PRESENTATION_SUMMARY.md  README.md  TRAINING_PROGRESSION.md  mmml_presentation.fdb_latexmk  mmml_presentation.fls  mmml_presentation.out  mmml_presentation.tex  mmml_presentation.vrb
cache/: jit_apply_fn-08e90fbe556b843c2f6f23fa2bc8e6fffe2951fa01c1d6ee46952c72a1808319-cache  jit_apply_fn-0a0bca3e16d15248c9fc9049d7c78678106d1a96a5ca760bb04c5e5e8e293ba4-cache  jit_apply_fn-0c05116d5fcf3c8a14cd136149a5ae72d26059f27067729a03abc6a099a65944-cache  jit_apply_fn-0f4befcb97a2af3e8af28ccd50b6303cfdadaff9bf1016f762573c731d2e18aa-cache  jit_apply_fn-11c06c30ac5dedcc15e1bb1f1e804bee0ff97f40681f358e884ce72fa3ae2117-cache  jit_apply_fn-12968e190a29128074b8c45e156f94c8c85a240093bdb97e0da9b19b678c0c65-cache  jit_apply_fn-1fe109790db31d8579332dd46d124730edf93beba8c255d1b55793a959b32c72-cache  jit_apply_fn-21154883ed501aef91b336cb066d33d6a214180df6f1af5b07737660ffd46212-cache  jit_apply_fn-23e893660f759928664d9ca71eb6e7a2d857e2e4f254caf967d1a3ea85fa2391-cache  jit_apply_fn-2489186c5d4c0816d6566c5fd7735d9e7d117dcfa8d18ab0b9927d02c995b8b9-cache  jit_apply_fn-34b83f276b1f0de8efcb2d77f7bb9e22e9577cc83f054eb5df375e1e3038c3df-cache  jit_apply_fn-36287d06c12059f1409bedc1675919cc284d99bf2ae6514b5d27795c1039cec2-cache  jit_apply_fn-3a32dce21dcb75a74c1d8bff057952fac4b04befbdcd57b5c5659aa1f8413a6b-cache  jit_apply_fn-3c84d4e3e2067b618f191f64786657bfc4bbeef8f89346b72019dfde41d26b7b-cache  jit_apply_fn-40ae66df703199d2a34a365a9fd871d9909a4421b0c985208294990194ed745e-cache  jit_apply_fn-443efae39c0e27073b9df0e8f835ae62846dad55cd08a8f77424dd0750df8961-cache  jit_apply_fn-4cb612e806fcfa5f26bdd3e48a13d13ca66872ba0830dc83e9cb878c8d6415c6-cache  jit_apply_fn-51043f5f58953c9df72bc44f9082e4c2c64f4e40acc4e67f1e05c1bf49e16ece-cache  jit_apply_fn-62639bd0d681f088c21861096f901d0f3d13afcf55627daf0a08377520e19124-cache  jit_apply_fn-676a8b2eaf2c1b412fa31d4719600e4a1992a917d69aa315927fa0145d8413bc-cache  jit_apply_fn-6a684a500f42bf5c177bc7ff42af906dcfd66b99321a423b2ea1402170812648-cache  jit_apply_fn-78f1c68e1ae123c7c9c227adcbade33816649172d8bd3e9433b1655347ca393d-cache  jit_apply_fn-800ee93ced76a0a23f2f01b13e470a493c46b777b29a22f9ccf9789a7c814cd8-cache  jit_apply_fn-8426045d2ec300c1c6d8e751e78868c0d432350e34cd3ffd308cda0158150f62-cache  jit_apply_fn-872a78a176e1db7428903284062f0a0a4099d527e77551dbf41bb73d2486216f-cache  jit_apply_fn-8d201916b2f7037d7a4ad5abb05324110674ba920ea4eb035da92c64c2dacc1e-cache  jit_apply_fn-8d7ca75b6b18e9855607dde0b4da6bde43f851127e022a2d24d0333be32619f9-cache  jit_apply_fn-9a118c54eea210ff80f10a8fc1533fffe292ab186bded272f43a776a6aef635d-cache  jit_apply_fn-a0f0e8823565ba6f51c55c9e882fe0c4d8f8fbb168c3d0a542be683b7d3a103b-cache  jit_apply_fn-a97d844cdb0ecdd68e77746fdfad919ca5deff3dbff04f384dbf9071775a7a16-cache  jit_apply_fn-acd2996a54c55f2d3565c4b50f12fca35a6d153c8aefd6c7c210d415c4ad1678-cache  jit_apply_fn-ad180c8508dfae61abd1a5279227ea4aeb17af3aceeebfeb47b413bf53dc44a1-cache  jit_apply_fn-b6a5d41f45bce61a1a715ea75a310915947c98dc86886a6bade40fa592321b46-cache  jit_apply_fn-bad60285ff52fcdfdbaac52f83ef5d7a8766ac0892e855be57db73d6d5277bce-cache  jit_apply_fn-bcff64c15e03381be7dd123c33d824e3b6dcfc8954469bfaf4d3224e850db01d-cache  jit_apply_fn-c42f92cc1f3d63d2741f6ebd8747b41b567ab7e39455125819141777937a7c78-cache  jit_apply_fn-c66a903a8e584e8401e9efe0123d1be6df1e6d0fc752ad862c4299954cfa2d22-cache  jit_apply_fn-ce5638b5e41249d46bdebfd58d5d7a4908fb0b697fd82dc4db1346d6c8b53b4f-cache  jit_apply_fn-d44eb20cf5da9b5ab57233f097201915a0c66bbd72821841e08ba5dfb258ae1b-cache  jit_apply_fn-dbf8d83c7d96276de3fc95086d6dee0d195b17398d6a8365a88831f404b8bbcf-cache  (+115 more)
ckpts_json/: DESdimers_params.json
config/: train_dcmnet_default.yaml
devtools/: AGENTS.md  README.md
dichloromethane/: suite_summary_jaxmd.json
docs/: Makefile  README.md  README_RTD.md  UNITS_SUMMARY.md  agent-handoff-pycharmm-9mer.md  api.md  api.rst  buildlogs  calculator-profiling.md  changelog.rst  cli.rst  cli_advanced.rst  cli_reference.md  conf.py  cube_data_guide.md  data_pipeline.md  dcmnet_calculators.md  developer_guide.rst  development.md  esp_cube_generation.rst  fftw-build.md  getting-started.md  getting_started.rst  handoff.md  hybrid-potential-regions.md  index.md  index.rst  liquid-box-workflow.md  long-range-solver-tutorial.md  make.bat  md-system-configs.md  mkdocs.yml  mlpot-long-range-electrostatics.md  mlpot-medium-pbc.md  mlpot-settings.md  mlpot-spatial-mpi.md  npz_schema.md  package-architecture.md  packed_memmap_loader.rst  physnet_charge_spin.rst  (+10 more)
examples/: README.md  Untitled.ipynb  crystal_image.str  demo.py  demo_packmol.py  demo_pdbfile.py  demo_test_minimize.py  example.out  md_simulation_md_trajectory.xyz.traj  mmml_calculator_basic.py  test.sh  (+20 more)
(+24221 files in other folders)
