[build-system]
requires = ["setuptools>=61.0", "wheel", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmml"
description = "Molecular Mechanics and Machine Learned Force Fields"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Eric Boittier", email = "eric.boittier@icloud.com" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.13,<3.14"

# Core dependencies - minimal set required for basic functionality
dependencies = [
    # Core scientific computing
    "numpy",
    "scipy",
    "pandas",
    "matplotlib>=3.5.0",
    # JAX ecosystem (CPU version by default)
    "jax",
    "jaxlib",
    "jax-md",
    "flax",
    "optax",
    "jaxtyping",
    "orbax-checkpoint",
    # ML utilities
    "ml-dtypes",
    # Chemistry core
    "ase",
    "pyyaml",
    # Hydra configuration
    # Utilities
    "tqdm",
    "rich",
    "pint",
    "h5py>=3.8.0",
    "apsw>=3.45.0",
    "e3x>=1.0.2",
    "plotnine>=0.15.1",
    "patchworklib>=0.6.6",
    "pillow>=12.0.0",
    # Web/API (for GUI)
    "fastapi",
    "uvicorn",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
# Interfaces and optional integrations
charmm-interface = []

# OpenFE (Open Free Energy) - conda-only; see mmml/interfaces/openfeInterface/README.md
# Install with: micromamba create -c conda-forge -n openfe openfe
openfe-interface = []

# Plotting and visualization utilities for training progress
plotting = [
    "asciichartpy>=1.5.25",
    "polars",
]

# GPU/CUDA support (CUDA 13, default)
# JAX CUDA 13 uses plugin/pjrt wheels (jax[cuda13]); there is no jaxlib[cuda13] extra.
# GPU requirement: NVIDIA SM 7.5+ (Turing or newer). Pascal/Volta (e.g. CC 6.x) are not supported — use gpu-cuda12.
# Runtime: cuDNN >= 9.10.1 (older versions are rejected by the JAX CUDA 13 plugin).
gpu = [
    "jax[cuda13]",
    "jaxlib",
    "jax-cuda13-plugin>=0.9.0",
    "jax-cuda13-pjrt>=0.9.0",
    "cupy-cuda13x>=13.0.0",
    "cutensor-cu13>=2.0.0",
#    "cuequivariance-ops-jax-cu13",
]

# GPU/CUDA support (CUDA 12) — use for Maxwell/Pascal/Volta (SM 5.2–7.2) and driver >= 525 on Linux.
# jaxlib has no [cuda12] extra in JAX 0.9+; jax[cuda12] pulls jax-cuda12-plugin[with-cuda] + jaxlib from PyPI.
gpu-cuda12 = [
    "jax[cuda12]>=0.9.0",
    "jaxlib",
    "jax-cuda12-plugin>=0.9.0",
    "jax-cuda12-pjrt>=0.9.0",
    "cupy-cuda12x>=13.0.0",
    "cutensor-cu12>=2.0.0",
#    "cuequivariance-ops-jax-cu12",
]

# Quantum chemistry calculations
quantum = [
    "pyscf>=2.8.0",
    "basis-set-exchange>=0.11",
    "pyscf-dispersion>=1.3.0",
    "geometric>=1.1.0",
    "dscribe",
]

# GPU-accelerated quantum chemistry (CUDA 13, default)
quantum-gpu = [
    "mmml[quantum]",
    "gpu4pyscf-cuda13x",
    "gpu4pyscf-libxc-cuda13x",
]

# GPU-accelerated quantum chemistry (CUDA 12)
quantum-gpu-cuda12 = [
    "mmml[quantum]",
    "gpu4pyscf-cuda12x",
    "gpu4pyscf-libxc-cuda12x",
]


# Machine learning extras
ml = [

    "e3x",
    "lovely-jax",
]

# Visualization and plotting
viz = [
    "plotly",
    "plotnine",
    "seaborn",
    "scienceplots",
    "cmcrameri",
    "patchworklib>=0.6.0",
    "py3dmol",

]

# Molecular dynamics and analysis
md = [
    "mdanalysis",
    "mda-xdrlib",
    "mmtf-python",
    "griddataformats",
    "mrcfile",
]

# Chemistry tools
chem = [
    "chemcoord",
    "pubchempy",
    "pyxtal",
    "molzip",
    "sphynx>=0.0.3",
]

# Data processing
data = [
    "polars",
    "pyarrow",
    "fastparquet<2026",  # 2026.3.0 lacks Linux x86_64 wheels
]

# Jupyter notebook support
notebooks = [
    "ipykernel",
    "ipython",
    "jupyter-client",
    "jupyter-core",
    "nbformat",
]

# Experiment tracking and optimization
experiments = [
    "wandb>=0.15.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "hydra-optuna-sweeper>=1.2.0",
]

# Development and testing
dev = [
    "pytest>=6.1.2",
    "ipykernel>=6.30.1",
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.7",
    "mkdocstrings[python]>=0.30",
]

# Full installation with all optional dependencies (CUDA 13 default)
all = [
    "mmml[gpu,quantum,quantum-gpu,ml,viz,md,chem,data,notebooks,experiments,plotting]",
]

# Full installation with all optional dependencies (CUDA 12)
all-cuda12 = [
    "mmml[gpu-cuda12,quantum,quantum-gpu-cuda12,ml,viz,md,chem,data,notebooks,experiments,plotting]",
]

# Alias for all (CUDA 13); same as all
all-cuda13 = [
    "mmml[gpu,quantum,quantum-gpu,ml,viz,md,chem,data,notebooks,experiments,plotting]",
]

# CPU-only full installation (no GPU dependencies)
all-cpu = [
    "mmml[quantum,ml,viz,md,chem,data,notebooks,experiments,plotting]",
]

[tool.uv.sources]
jax-md = { git = "https://github.com/google/jax-md.git"}

[[tool.uv.index]]
name = "jax-cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
explicit = true

[project.scripts]
mmml = "mmml.cli.__main__:main"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
where = ["."]
include = ["mmml*", "pycharmm*"]

[tool.setuptools.package-data]
mmml = ["py.typed"]
pycharmm = ["README.md", "LICENSE"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "mmml/_version.py"
